--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -76,7 +76,7 @@
 
   text-align: center;
 }
-
+/*
 @media (min-width: 768px) {
   .process {
     width: 768px;
@@ -93,4 +93,4 @@
   .process__link {
     width: 100%;
   }
-}
+}*/
