--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -7,46 +7,13 @@
   opacity: 0.3;
 }
 
-.site-list__link--icon {
-  margin-right: 20px;
-  fill: $black-2;
-  opacity: 0.2;
-}
-
-.site-list__item:hover .site-list__link--icon,
-.site-list__item:focus .site-list__link--icon {
-  fill: $seafoam-blue;
-  opacity: 1;
-}
-
-.site-list__item:active .site-list__link--icon {
-  fill: $seafoam-blue;
-  opacity: 0.3;
-}
-
-.site-list {
-  margin: 0;
-  padding-left: 0;
-  /*display: none;*/
-}
-
 .site-list__item {
   padding: 30px 9px 30px 70px;
   box-shadow: 0 1px 0 0 $white-2;
 }
-
-.site-list__item--search,
-.site-list__item--cart {
-  padding-left: 25px;
-}
-
+/*
 @media (min-width: 768px) {
-  .site-list {
-    display: flex;
-    justify-content: space-between;
-  }
-
   .site-list__item {
     padding: 0;
   }
-}
+}*/
