--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,4 +1,5 @@
 .contacts {
+  width: 100%;
   margin-bottom: 40px;
 }
 
@@ -53,12 +54,12 @@
   line-height: 2;
 }
 
-.contacts__map {
-  margin: 0;
+.contacts__iframe {
+  width: 100%;
 }
 
-.contacts__iframe {
-  width: 100%;          /*как растянуть карту на весь вьюпорт?*/
+.contacts__link-wrap {
+  padding: 0 30px;
 }
 
 .contacts__link {
@@ -71,10 +72,6 @@
 }
 
 @media (min-width: 768px) {
-  .contacts__wrapper {
-    padding-top: 30px;
-  }
-
   .contacts__block {
     display: flex;
     flex-wrap: wrap;
@@ -119,13 +116,6 @@
 }
 
 @media (min-width: 1150px) {
-  .contacts__wrapper {
-    padding-top: 60px;
-
-    position: relative;
-    display: flex;
-  }
-
   .contacts__block {
     height: 410px;
     padding-top: 70px;
