--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,6 +1,5 @@
 .page-footer {
   width: 100%;
-  margin: 0 auto;
 
   background-color: $white-1;
 }
@@ -29,7 +28,8 @@
   }
 
   .page-footer__wrapper {
-    padding: 50px 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
 
     display: flex;
     justify-content: space-between;
