--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,11 +1,11 @@
 .page-main {
   width: 100%;
-  margin: 0 auto;
 }
 
 .page-main__title {
   width: 250px;
   margin: 0 auto;
+  padding-top: 90px;
 
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 27px;
@@ -18,7 +18,8 @@
 }
 
 .page-main__title-wrap {
-  padding: 93px 35px 193px;
+  height: 375px;
+  padding: 0;
 
   background-color: $grey-1;
   background-image: url("../img/hero-mobile@1x.jpg");
@@ -26,21 +27,20 @@
   background-position: center;
 }
 
-.page-main__title-inner {
-  padding: 75px 20px;
-
-  background-color: $white-1;
-}
-
 @media (min-width: 768px) {
   .page-main__title-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     height: 746px;
-    padding-top: 160px;
+    padding: 0 50px;
     background-image: url("../img/hero-tablet@1x.jpg");
   }
 
   .page-main__title {
     width: 500px;
+    margin-top: 70px;
     font-size: 43px;
   }
 }
