--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,10 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
+@import "blocks/page-inner.scss";
 @import "blocks/site-list.scss";
+@import "blocks/user-list.scss";
+@import "blocks/stock-list.scss";
 @import "blocks/catalog-main.scss";
 @import "blocks/promo.scss";
 @import "blocks/specif-list.scss";
