--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,6 +1,6 @@
 .promo {
-  margin-top: 150px;
-  padding-bottom: 36px;
+  margin-top: 155px;
+  padding-bottom: 40px;
 }
 
 .promo__week {
@@ -20,7 +20,7 @@
 }
 
 .promo__price-wrap {
-  width: 290px;
+  width: 260px;
 }
 
 .promo__price {
@@ -31,10 +31,14 @@
 }
 
 @media (min-width: 768px) {
+  .promo {
+    margin-top: 0;
+  }
+
   .promo__title-wrap {
     width: 100%;
-    margin-bottom: 25px;
-    padding-top: 15px;
+    margin-bottom: 50px;
+    padding-top: 20px;
 
     display: flex;
     justify-content: space-between;
@@ -45,28 +49,38 @@
     width: 70px;
     margin-right: 25px;
     padding-top: 20px;
+
+    align-self: flex-end;
+
     text-align: center;
   }
 
   .promo__wrapper {
-    padding-bottom: 50px;
+    padding-bottom: 60px;
     display: flex;
     flex-wrap: wrap;
   }
 
   .promo__description-wrap {
-    width: 292px;
-    margin-right: 50px;
+    flex-basis: 50%;
+    margin-top: -25px;
+    padding-top: 0;
   }
 
   .promo__description {
-    padding-bottom: 40px;
     font-size: 17px;
     line-height: 1.8;
   }
 
+  .promo__image {
+    width: 330px;
+    height: 404px;
+    margin-top: 0;
+  }
+
   .promo__price-wrap {
-    margin-top: -40px;
+    width: 292px;
+    margin-top: -130px;
   }
 
   .promo__price {
@@ -82,11 +96,49 @@
 
 @media (min-width: 1150px) {
   .promo__wrapper {
-    padding-top: 70px;
+    margin-top: 20px;
+    padding-bottom: 90px;
     padding-left: 170px;
   }
 
+  .promo__description-wrap {
+    position: relative;
+    z-index: 1;
+
+    flex-basis: 40%;
+    margin-top: 35px;
+    margin-right: 30px;
+    padding-left: 50px;
+  }
+
   .promo__price-wrap {
-    margin-top: 25px;
+    margin-top: -130px;
+    margin-left: 50px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .promo__title-wrap {
+    position: relative;
+    top: 60px;
+    right: 350px;
+    z-index: 3;
+
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+  }
+
+  .promo__week {
+    padding-top: 35px;
+  }
+
+  .promo__image {
+    width: 520px;
+    height: 636px;
+    margin-top: -100px;
+
+    z-index: 1;
   }
 }
