--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,7 +3,17 @@
   padding-bottom: 40px;
 }
 
-.promo__week {
+.promo__title-wrap {
+  position: relative;
+}
+
+.promo__title::after {
+  position: absolute;
+  top: 35px;
+  left: 0;
+  content: "товар недели";
+
+  font-size: 17px;
   line-height: 1.2;
   text-transform: uppercase;
 
@@ -11,7 +21,7 @@
 }
 
 .promo__description {
-  padding-top: 5px;
+  padding-top: 30px;
   padding-bottom: 20px;
 }
 
@@ -38,21 +48,13 @@
   .promo__title-wrap {
     width: 100%;
     margin-bottom: 50px;
-    padding-top: 20px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
 
-  .promo__week {
+  .promo__title::after {
     width: 70px;
-    margin-right: 25px;
-    padding-top: 20px;
-
-    align-self: flex-end;
-
+    left: 570px;
     text-align: center;
+    line-height: 1;
   }
 
   .promo__wrapper {
@@ -63,11 +65,11 @@
 
   .promo__description-wrap {
     flex-basis: 50%;
-    margin-top: -25px;
     padding-top: 0;
   }
 
   .promo__description {
+    padding-top: 0;
     font-size: 17px;
     line-height: 1.8;
   }
@@ -96,19 +98,34 @@
 
 @media (min-width: 1150px) {
   .promo__wrapper {
-    margin-top: 20px;
+    padding-top: 40px;
     padding-bottom: 90px;
     padding-left: 170px;
   }
 
   .promo__description-wrap {
-    position: relative;
-    z-index: 1;
-
     flex-basis: 40%;
     margin-top: 35px;
     margin-right: 30px;
     padding-left: 50px;
+  }
+
+  .promo__image {
+    width: 520px;
+    height: 636px;
+    margin-top: -100px;
+  }
+
+  .promo__title-wrap {
+    position: relative;
+    top: 60px;
+    left: 50px;
+    z-index: 3;
+  }
+
+  .promo__title::after {
+    top: 45px;
+    left: -120px;
   }
 
   .promo__price-wrap {
@@ -118,27 +135,5 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-
-  .promo__title-wrap {
-    position: relative;
-    top: 60px;
-    right: 350px;
-    z-index: 3;
-
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-  }
-
-  .promo__week {
-    padding-top: 35px;
-  }
-
-  .promo__image {
-    width: 520px;
-    height: 636px;
-    margin-top: -100px;
-
-    z-index: 1;
   }
 }
