--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -32,3 +32,16 @@
     line-height: 1.6;
   }
 }
+
+@media (min-width: 1150px) {
+  .site-list {
+    order: 1;
+    top: 0;
+    left: -20px;
+  }
+
+  .site-list__link {
+    font-size: 17px;
+    line-height: 1.4;
+  }
+}
