--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -62,3 +62,11 @@
     display: none;
   }
 }
+
+@media (min-width: 1150px) {
+  .user-list {
+    flex-basis: 35%;
+    padding-right: 15px;
+    order: 3;
+  }
+}
