--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,7 +1,3 @@
-.main-nav {
-  position: relative;
-}
-
 .main-nav__logo {
   display: block;
   padding: 20px 115px;
@@ -46,41 +42,41 @@
     display: none;
   }
 
+  .main-nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
   .main-nav__service {
     position: absolute;
-    top: 85px;
+    top: 90px;
     right: 45px;
+    z-index: 3;
 
     display: block;
   }
 
   .main-nav__logo {
-    flex-basis: 27%;
+    flex-basis: 50%;
     padding: 0;
+    padding-top: 10px;
+    padding-left: 50px;
 
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-
-    box-shadow: 0 1px 0 0 $white-2;
   }
 
   .main-nav__logo-image {
     width: 112px;
     height: 46px;
   }
-
-  .main-nav {
-    width: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
 }
 
 @media (min-width: 1150px) {
   .main-nav__logo {
-    flex-basis: 65%;
+    flex-basis: 25%;
     padding-right: 100px;
 
     justify-content: flex-end;
@@ -94,7 +90,7 @@
   }
 
   .main-nav__service {
-    top: 90px;
-    right: 55px;
+    top: 100px;
+    right: 50px;
   }
 }
