--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -79,8 +79,8 @@
     flex-basis: 25%;
     padding-right: 100px;
 
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     order: 2;
   }
 
