--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,5 @@
 .button {
-  width: 260px;
+  width: 100%;
   padding: 15px 85px;
 
   font-family: "Open Sans", "Tahoma", sans-serif;
@@ -7,6 +7,7 @@
   font-weight: bold;
   line-height: 1.2;
 
+  text-align: center;
   text-transform: uppercase;
   border: 2px solid $greyish-brown;
   cursor: pointer;
