--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -38,6 +38,7 @@
     margin-bottom: 20px;
     padding: 0 50px;
     background-image: url("../img/hero-tablet@1x.jpg");
+    border-top: 1px solid $white-2;
   }
 
   .page-main__title {
