--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -61,6 +61,7 @@
     padding-bottom: 60px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .promo__description-wrap {
@@ -91,7 +92,6 @@
   }
 
   .promo__button {
-    width: 292px;
     margin-top: 7px;
   }
 }
