--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -9,7 +9,7 @@
 
 .site-list__item {
   padding: 30px 9px 30px 70px;
-  box-shadow: 0 1px 0 0 $white-2;
+  border-top: 1px solid $white-2;
 }
 
 @media (min-width: 768px) {
@@ -29,9 +29,13 @@
 
   .site-list__item {
     padding: 0;
-    padding-left: 35px;
+    padding-left: 65px;
 
-    box-shadow: none;
+    border: none;
+  }
+
+  .site-list__item:nth-child(2n) {
+    padding-left: 40px;
   }
 
   .site-list__link {
@@ -44,11 +48,19 @@
   .site-list {
     position: static;
     flex-basis: 40%;
-    padding-left: 15px;
+    padding-left: 50px;
+  }
+
+  .site-list__item {
+    padding: 30px 35px 30px 0;
   }
 
   .site-list__item:first-child {
-    padding-right: 35px;
+    border-right: 1px solid $white-2;
+  }
+
+  .site-list__item:nth-child(2n) {
+    padding-left: 35px;
   }
 
   .site-list__link {
