--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -31,8 +31,8 @@
 }
 
 .user-list__item {
-  padding: 30px 9px 30px 70px;
-  box-shadow: 0 1px 0 0 $white-2;
+  padding: 30px 9px 30px 60px;
+  border-top: 1px solid $white-2;
 }
 
 .user-list__item--search,
@@ -50,7 +50,8 @@
   }
 
   .user-list__item {
-    box-shadow: 0 0 0 1px $white-2;
+    border-top: none;
+    border-left: 1px solid $white-2;
   }
 
   .user-list__item--cart {
