--- a/source/sass/blocks/catalog-list.scss
+++ b/source/sass/blocks/catalog-list.scss
@@ -4,13 +4,9 @@
 }
 
 .catalog-list__desc {
-  margin-top: -7px;
   padding: 0 30px;
   border: 1px solid $white-2;
-}
-
-.catalog-list__item {
-  margin-bottom: 50px;
+  border-top: none;
 }
 
 .catalog-list__item:hover .catalog-list__desc,
@@ -24,6 +20,7 @@
 
 .catalog-list__image {
   margin-top: 30px;
+  display: block;
 }
 
 .catalog-list__name {
@@ -50,11 +47,11 @@
 }
 
 .catalog-list__wrap {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 
-  padding-top: 25px;
-  padding-bottom: 30px;
+  padding: 30px 0;
 
   border-top: 1px solid $white-2;
 }
@@ -65,6 +62,7 @@
 }
 
 .catalog-list__button {
+  display: block;
   background-color: transparent;
   border: none;
 }
@@ -87,26 +85,85 @@
 
 @media (min-width: 768px) {
   .catalog-list__item {
+    margin-bottom: 55px;
+
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+  }
+
+  .catalog-list__image {
+    width: 334px;
     height: 334px;
+    margin-top: 0;
   }
 
   .catalog-list__desc {
-    width: 335px;
+    flex-basis: 50%;
     margin: 0;
-    padding: 0 25px;
+    padding: 0 27px;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-start;
+
+    border-top: 1px solid $white-2;
+    border-left: none;
   }
 
   .catalog-list__link {
-    width: 334px;
+    padding-right: 40px;
   }
 
-  .catalog-list__wrap {
-    padding: 25px 0;
+  .catalog-list__name {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .catalog-list__description {
+    width: 100%;
+    margin-top: -125px;
+    font-size: 15px;
+    line-height: 2;
+  }
+
+  .catalog-list__price {
+    font-size: 17px;
+    line-height: 1.4;
+  }
+}
+
+@media (min-width: 1150px) {
+  .catalog-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 70px;
+  }
+
+  .catalog-list__item {
+    width: 316px;
+    flex-direction: column;
+    margin-right: 50px;
+  }
+
+  .catalog-list__item:last-child {
+    margin-right: 0;
+  }
+
+  .catalog-list__image {
+    width: 316px;
+    height: 462px;
+  }
+
+  .catalog-list__desc {
+    border-left: 1px solid $white-2;
+  }
+
+  .catalog-list__description {
+    margin-top: 0;
+  }
+
+  .catalog-list__link {
+    padding-right: 30px;
   }
 }
