--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,12 +4,13 @@
 }
 
 .social__list {
+  min-width: 140px;
+  margin-top: 0;
+  padding: 25px 0 0;
+
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-
-  margin-top: 0;
-  padding: 25px 40px 0;
 }
 
 .social__link {
@@ -28,9 +29,6 @@
 @media (min-width: 768px) {
   .social__list {
     padding: 0;
-  }
-
-  .social__item:not(:last-child) {
-    padding-right: 40px;
+    justify-content: space-between;
   }
 }
