--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -5,18 +5,18 @@
   margin-bottom: 60px;
 }
 
-.process__wrap-title {
-  padding: 20px 43px 25px 90px;
+.process__title {
+  margin: 0;
+  padding: 20px 43px 25px 35px;
 
-  background-image: url("../img/icon-video.svg");
-  background-repeat: no-repeat;
-  background-position: 15%;
+  display: flex;
 
   border: 1px solid $white-2;
 }
 
-.process__title {
-  margin: 0;
+.process__title::before {
+  padding-right: 25px;
+  content: url("../img/icon-video.svg");
 }
 
 .process__video {
@@ -70,27 +70,110 @@
 
 .process__link {
   display: block;
-
-  width: 190px;
   padding: 15px 0;
 
   text-align: center;
 }
-/*
+
 @media (min-width: 768px) {
-  .process {
-    width: 768px;
+  .process__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .process__title {
+    padding-top: 30px;
+    padding-left: 45px;
+
+    order: 2;
+    align-items: center;
+
+    font-size: 20px;
+    line-height: 1.2;
+    border-bottom: none;
   }
 
   .process__video {
+    order: 1;
+  }
+
+  .process__image {
+    width: 668px;
     height: 455px;
   }
 
+  .process__button {
+    top: 190px;
+    left: 283px;
+  }
+
   .process__wrap {
-    padding: 40px;
+    padding-top: 0;
+    padding-bottom: 45px;
+
+    order: 3;
+
+    border-top: none;
+  }
+
+  .process__description {
+    padding-bottom: 35px;
+
+    font-size: 15px;
+    line-height: 2;
+  }
+}
+
+@media (min-width: 1150px) {     /*BORDER?*/
+  .process__wrapper {
+    position: relative;
+    padding-bottom: 60px;
+
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+    border-left: none;
+  }
+
+  .process__title {
+    max-width: 370px;
+    padding-top: 10px;
+    padding-left: 80px;
+    padding-right: 70px;
+
+    flex-direction: column;
+    align-items: flex-start;
+
+    border-left: none;
+  }
+
+  .process__title::before {
+    padding-bottom: 20px;
+  }
+
+  .process__video {
+    position: absolute;
+    top: -30px;
+    left: 45px;
+  }
+
+  .process__image {
+    width: 682px;
+  }
+
+  .process__wrap {
+    max-width: 370px;
+    padding-top: 5px;
+    padding-left: 80px;
+  }
+
+  .process__description {
+    padding-bottom: 45px;
   }
 
   .process__link {
-    width: 100%;
+    width: 230px;
   }
-}*/
+}
