--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -42,20 +42,19 @@
 
 @media (min-width: 768px) {
   .user-list {
-    /*flex-basis: 50%;*/
+    flex-basis: 50%;
+    padding-right: 30px;
 
     display: flex;
-    /*justify-content: flex-end;*/
-    /*order: 0;*/
+    justify-content: flex-end;
   }
 
   .user-list__item {
+    padding-left: 20px;
+    padding-right: 20px;
+
     border-top: none;
     border-left: 1px solid $white-2;
-  }
-
-  .user-list__item--cart {
-    /*padding-right: 40px;*/
   }
 
   .use-list__link--note {
@@ -66,7 +65,6 @@
 @media (min-width: 1150px) {
   .user-list {
     flex-basis: 35%;
-    padding-right: 0;
     order: 3;
   }
 }
