Адаптив форма mobile

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import "blocks/catalog-list.scss";
 @import "blocks/process.scss";
 @import "blocks/order.scss";
+@import "blocks/order-form.scss";
