--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -124,10 +124,12 @@
   }
 }
 
-@media (min-width: 1150px) {     /*BORDER?*/
+@media (min-width: 1150px) {
   .process__wrapper {
     position: relative;
-    padding-bottom: 60px;
+    margin-top: -30px;
+    margin-bottom: 100px;
+    padding-bottom: 0;
 
     flex-wrap: wrap;
     flex-direction: column;
@@ -139,7 +141,7 @@
 
   .process__title {
     max-width: 370px;
-    padding-top: 10px;
+    padding-top: 40px;
     padding-left: 80px;
     padding-right: 70px;
 
@@ -155,7 +157,7 @@
 
   .process__video {
     position: absolute;
-    top: -30px;
+    top: 0;
     left: 45px;
   }
 
@@ -166,6 +168,7 @@
   .process__wrap {
     max-width: 370px;
     padding-top: 5px;
+    padding-bottom: 60px;
     padding-left: 80px;
   }
 
