--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -6,10 +6,10 @@
 .social__list {
   min-width: 140px;
   margin-top: 0;
-  padding: 25px 0 0;
+  padding: 25px 55px 0;
 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: baseline;
 }
 
@@ -29,6 +29,5 @@
 @media (min-width: 768px) {
   .social__list {
     padding: 0;
-    justify-content: space-between;
   }
 }
