--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -6,6 +6,19 @@
   border: none;
 }
 
+.order-form__wrapper--fullname {
+  margin-bottom: -10px;
+}
+
+.order-form__wrapper--mail {
+  padding-top: 5px;
+}
+
+.order-form__wrapper--textarea {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .order-form__name {
   position: relative;
   line-height: 1;
@@ -27,6 +40,61 @@
 
 .order-form__name--mail::after {
   width: 179px;
+}
+
+.order-form__set {
+  position: relative;
+
+  margin: 0;
+  padding: 0;
+}
+
+.order-form__item {
+  margin-bottom: 20px;
+  padding: 10px 0 12px 0;
+}
+
+.order-form__item:first-child {
+  margin-top: 25px;
+}
+
+.order-form__item--interior {
+  margin-bottom: 0;
+}
+
+.order-form__item-user {
+  padding: 5px 0 0;
+}
+
+.order-form__sign {
+  display: block;
+  width: 260px;
+  padding-left: 65px;
+
+  line-height: 1;
+  cursor: pointer;
+
+  color: $black;
+}
+
+.order-form__sign-user {
+  margin: 0;
+  padding: 0;
+
+  cursor: pointer;
+}
+
+.order-form__sign-user:hover .order-form__input-user,
+.order-form__sign-user:active .order-form__input-user {
+  border-bottom: 2px solid $seafoam-blue-2;
+}
+
+.order-form__sign-user:hover .order-form__icon--tel,
+.order-form__sign-user:hover .order-form__icon--mail,
+.order-form__sign-user:active .order-form__icon--tel,
+.order-form__sign-user:active .order-form__icon--mail {
+  fill: $seafoam-blue-2;
+  opacity: 1;
 }
 
 .order-form__input {
@@ -93,60 +161,12 @@
   box-shadow: 0 0 0 4px $grey;
 }
 
-.order-form__set {
-  position: relative;
-
-  margin: 0;
-  padding: 0;
-}
-
-.order-form__item {
-  margin-bottom: 20px;
-  padding: 10px 0 12px 0;
-}
-
-.order-form__item:first-child {
-  margin-top: 25px;
-}
-
-.order-form__item--interior {
-  margin-bottom: 0;
-}
-
-.order-form__item-user {
-  padding: 0;
-}
-
-.order-form__sign {
-  display: block;
-  width: 260px;
-  padding-left: 65px;
-
-  line-height: 1;
-  cursor: pointer;
-
-  color: $black;
-}
-
-.order-form__sign-user {
-  margin: 0;
-  padding: 0;
-
-  cursor: pointer;
-}
-
 .order-form__input-user {
   width: 100%;
   padding: 15px 0;
   border: none;
   border-bottom: 2px solid $black;
-}
-
-.order-form__textarea {
-  height: 140px;
-  padding: 17px;
-  border: 2px solid $greyish-brown;
-  resize: none;
+  background-color: transparent;
 }
 
 .order-form__input-user::placeholder {
@@ -172,17 +192,11 @@
   opacity: 0.2;
 }
 
-.order-form__sign-user:hover .order-form__input-user,
-.order-form__sign-user:active .order-form__input-user {
-  border-bottom: 2px solid $seafoam-blue-2;
-}
-
-.order-form__sign-user:hover .order-form__icon--tel,
-.order-form__sign-user:hover .order-form__icon--mail,
-.order-form__sign-user:active .order-form__icon--tel,
-.order-form__sign-user:active .order-form__icon--mail {
-  fill: $seafoam-blue-2;
-  opacity: 1;
+.order-form__textarea {
+  height: 140px;
+  padding: 17px;
+  border: 2px solid $greyish-brown;
+  resize: none;
 }
 
 .order-form__textarea:hover,
@@ -191,8 +205,6 @@
 }
 
 .order-form__note {
-  padding: 0 30px;
-
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -205,15 +217,216 @@
 .order-form__button {
   width: 260px;
   margin-top: 30px;
-  margin-left: 30px;
   padding: 15px 0;
 }
 
-.order-form__wrapper--fullname {
-  margin-bottom: -10px;
+
+@media (min-width: 768px) {
+  .order-form__field {
+    margin-bottom: 40px;
+  }
+
+  .order-form__field--color,
+  .order-form__field-user {
+    background-color: $white-1;
+  }
+
+  .order-form__field--tel {
+    margin-bottom: 0;
+  }
+
+  .order-form__field--textarea {
+    margin-bottom: 0;
+  }
+
+  .order-form__wrapper {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .order-form__wrapper--tel {
+    padding-top: 30px;
+  }
+
+  .order-form__wrapper--mail {
+    padding-bottom: 30px;
+  }
+
+  .order-form__name::after {
+    display: none;
+  }
+
+  .order-form__name--type {
+    padding-top: 18px;
+    padding-right: 130px;
+  }
+
+  .order-form__name--color {
+    padding-top: 47px;
+    padding-right: 120px;
+  }
+
+  .order-form__name--fullname {
+    padding-top: 10px;
+    padding-right: 120px;
+  }
+
+  .order-form__name--tel {
+    padding-top: 0;
+    padding-right: 110px;
+  }
+
+  .order-form__name--mail {
+    padding-right: 80px;
+  }
+
+  .order-form__name--add {
+    padding-right: 100px;
+  }
+
+  .order-form__set--color {
+    padding-top: 30px;
+    padding-bottom: 25px;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .order-form__set--fullname {
+    width: 100%;
+  }
+
+  .order-form__item--color {
+    width: 245px;
+    padding-bottom: 25px;
+  }
+
+  .order-form__item--interior {
+    margin-bottom: 30px;
+  }
+
+  .order-form__item-user {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 15px;
+  }
+
+  .order-form__sign {
+    width: 350px;
+    padding-left: 80px;
+    font-size: 19px;
+  }
+
+  .order-form__sign-user {
+    width: 100%;
+    padding: 0;
+    padding-bottom: 25px;
+
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .order-form__input:checked + .order-form__box--radio::after {
+    top: 13px;
+    left: 13px;
+
+    width: 22px;
+    height: 22px;
+  }
+
+  .order-form__input-user {
+    margin-left: 25px;
+    padding-top: 0;
+  }
+
+  .order-form__input-info {
+    padding: 15px 0;
+  }
+
+  .order-form__input-user::placeholder {
+    padding-left: 17px;
+    font-size: 19px;
+  }
+
+  .order-form__textarea {
+    padding-top: 10px;
+    padding-left: 0;
+  }
+
+  .order-form__box {
+    width: 53px;
+    height: 53px;
+    margin-top: -15px;
+    margin-left: -80px;
+  }
+
+  .order-form__icon--tel,
+  .order-form__icon--mail {
+    top: 10px;
+    right: 13px;
+  }
+
+  .order-form__wrap {
+    padding: 10px 10px 0 15px;
+
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+
+  .order-form__note {
+    padding: 0 30px;
+    font-size: 17px;
+    line-height: 1.8;
+  }
+
+  .order-form__button {
+    width: 230px;
+    margin-left: 30px;
+  }
 }
 
-.order-form__wrapper--textarea {
-  padding-top: 10px;
-  padding-bottom: 10px;
+@media (min-width: 1150px) {
+  .order-form__wrapper--tel,
+  .order-form__wrapper--mail {
+    padding-right: 220px;
+  }
+
+  .order-form__wrapper--textarea {
+    padding-top: 0;
+    padding-right: 225px;
+  }
+
+  .order-form__name {
+    padding-left: 65px;
+    padding-right: 70px;
+  }
+
+  .order-form__name--tel {
+    padding-right: 50px;
+  }
+
+  .order-form__name--mail {
+    padding-right: 25px;
+  }
+
+  .order-form__name--add {
+    padding-right: 44px;
+  }
+
+  .order-form__set--color {
+    padding-right: 105px;
+  }
+
+  .order-form__set--fullname {
+    padding-right: 175px;
+  }
+
+  .order-form__wrap {
+    padding: 10px 195px 0 195px;
+  }
 }
