--- a/source/sass/blocks/order.scss
+++ b/source/sass/blocks/order.scss
@@ -4,6 +4,23 @@
 }
 
 .order__description {
-  padding: 5px 30px;
+  padding: 0 30px 10px;
   line-height: 1.8;
+}
+
+@media (min-width: 768px) {
+  .order__description {
+    padding: 20px 50px 40px;
+
+    font-size: 17px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .order__description {
+    padding-top: 90px;
+    padding-bottom: 37px;
+    padding-left: 225px;
+    padding-right: 200px;
+  }
 }
