--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,4 @@
 @import "blocks/process.scss";
 @import "blocks/order.scss";
 @import "blocks/order-form.scss";
+@import "blocks/modal-popup.scss";
