--- a/source/sass/blocks/modal-popup.scss
+++ b/source/sass/blocks/modal-popup.scss
@@ -1,5 +1,7 @@
 .modal-popup {
+  width: 100%;
   padding: 35px 30px;
+
   border: 1px solid $grey-2;
   box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
 }
@@ -7,10 +9,9 @@
 .modal-popup__title {
   width: 150px;
   margin: 0 auto;
-  font-family: "Open Sans", "Tahoma", sans-serif;
+
   font-size: 25px;
   font-weight: bold;
-
   line-height: 1.2;
   text-transform: uppercase;
 
@@ -22,10 +23,34 @@
   margin: 0 auto;
   padding-top: 13px;
 
-  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 15px;
-
   line-height: 2;
 
   color: $greyish-brown;
+}
+
+.modal-popup__wrapper {
+  margin-bottom: 30px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-popup__sign {
+  padding: 20px 50px;
+
+  font-size: 17px;
+  line-height: 1;
+  font-weight: bold;
+  cursor: pointer;
+
+  color: $greyish-brown;
+  background-color: $white;
+  border: 2px solid rgba(68, 68, 68, 0.1);
+}
+
+.modal-popup__button {
+  border: none;
+  color: $white;
+  background-color: $seafoam-blue;
 }
