--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,6 +1,9 @@
 .promo {
-  margin-top: 155px;
-  padding-bottom: 40px;
+  margin-top: 160px;
+}
+
+.promo__wrapper {
+  padding-bottom: 50px;
 }
 
 .promo__title-wrap {
@@ -34,7 +37,7 @@
 }
 
 .promo__price {
-  padding-bottom: 25px;
+  padding-bottom: 45px;
 
   text-align: center;
   color: $greyish-brown;
