--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,7 +4,7 @@ $white: #ffffff;
 $white-1: #f1f1f1;
 $white-2: #ececec;
 $grey: #989898;
-$grey-1: #fbfbfb;
+$grey-1: #f9f9f9;
 $grey-2: #c6c6c6;
 $black: #000000;
 $black-1: #010000;
