--- a/source/sass/blocks/catalog-list.scss
+++ b/source/sass/blocks/catalog-list.scss
@@ -1,10 +1,13 @@
 .catalog-list {
   margin: 0;
   padding: 0;
+  padding-top: 10px;
 }
 
 .catalog-list__desc {
+  margin-bottom: 38px;
   padding: 0 30px;
+
   border: 1px solid $white-2;
 }
 
@@ -18,7 +21,7 @@
 }
 
 .catalog-list__image {
-  margin-top: 30px;
+  margin-top: 25px;
   display: block;
 }
 
@@ -50,7 +53,7 @@
   display: flex;
   justify-content: space-between;
 
-  padding: 30px 0;
+  padding: 20px 0;
 
   border-top: 1px solid $white-2;
 }
@@ -107,7 +110,6 @@
     align-items: flex-start;
 
     border-top: 1px solid $white-2;
-    border-left: none;
   }
 
   .catalog-list__link {
