--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,8 @@
 .page-header {
+  position: relative;
+  z-index: 5;
+
   min-width: 320px;
-  /*margin: 0 auto;*/
+
+  background-color: $white;
 }
