--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -7,8 +7,14 @@
   opacity: 0.3;
 }
 
+.user-list__link {
+  padding-left: 5px;
+  display: flex;
+  align-items: center;
+}
+
 .user-list__link--icon {
-  margin-right: 20px;
+  margin-right: 25px;
   fill: $black-2;
   opacity: 0.2;
 }
@@ -31,7 +37,8 @@
 }
 
 .user-list__item {
-  padding: 30px 9px 30px 60px;
+  padding: 27px 9px 27px 75px;
+
   border-top: 1px solid $white-2;
 }
 
@@ -42,7 +49,7 @@
 
 @media (min-width: 768px) {
   .user-list {
-    flex-basis: 50%;
+    flex-basis: 54%;
     padding-right: 30px;
 
     display: flex;
@@ -50,14 +57,15 @@
   }
 
   .user-list__item {
-    padding-left: 20px;
+    padding: 33px;
+    padding-bottom: 30px;
     padding-right: 20px;
 
     border-top: none;
     border-left: 1px solid $white-2;
   }
 
-  .use-list__link--note {
+  .user-list__link--note {
     display: none;
   }
 }
