--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -78,7 +78,7 @@
     position: relative;
 
     margin-bottom: 15px;
-    padding-top: 0;
+    padding-top: 46px;
     padding-bottom: 40px;
 
     display: flex;
@@ -88,8 +88,7 @@
 
   .contacts__title {
     width: 100%;
-    padding-top: 0;
-
+    padding-bottom: 30px;
 
     display: flex;
     justify-content: space-between;
@@ -100,11 +99,13 @@
   }
 
   .contacts__title::after {
+    padding-right: 5px;
     content: url("../img/icon-flag.svg");
   }
 
   .contacts__wrap {
     margin: 0;
+
     font-size: 17px;
     line-height: 1.8;
   }
@@ -114,18 +115,18 @@
   }
 
   .contacts__address {
-    width: 250px;
+    width: 260px;
     margin-top: 0;
   }
 
   .contacts__link-wrap {
-    padding-bottom: 15px;
+    padding-bottom: 13px;
   }
 
   .contacts__link {
     width: 230px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 40px;
     padding: 15px 20px;
   }
 }
