--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -37,6 +37,7 @@
     justify-content: space-between;
 
     height: 746px;
+    margin-top: 0;
     margin-bottom: 20px;
     padding: 0 50px;
     background-image: url("../img/hero-tablet@1x.jpg");
