--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -61,7 +61,7 @@
   }
 
   .promo__wrapper {
-    padding-bottom: 60px;
+    padding-bottom: 70px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -73,7 +73,9 @@
   }
 
   .promo__description {
+    margin-top: 0;
     padding-top: 0;
+
     font-size: 17px;
     line-height: 1.8;
   }
@@ -86,7 +88,7 @@
 
   .promo__price-wrap {
     width: 292px;
-    margin-top: -130px;
+    margin-top: -125px;
   }
 
   .promo__price {
@@ -95,7 +97,7 @@
   }
 
   .promo__button {
-    margin-top: 7px;
+    padding: 12px 100px;
   }
 }
 
