--- a/source/sass/blocks/specif-list.scss
+++ b/source/sass/blocks/specif-list.scss
@@ -6,9 +6,9 @@
   padding: 7px 30px 7px 0;
   border-bottom: 1px solid $white-2;
 }
-/*
+
 @media (min-width: 768px) {
   .specif-list__item td {
-    padding: 7px 45px 7px 0;
+    padding-top: 13px;
   }
-}*/
+}
