--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -57,12 +57,16 @@
   }
 
   .user-list__item {
-    padding: 33px;
-    padding-bottom: 30px;
-    padding-right: 20px;
+    padding-bottom: 35px;
+    padding-right: 25px;
 
     border-top: none;
     border-left: 1px solid $white-2;
+  }
+
+  .user-list__link--icon {
+    margin-top: 7px;
+    margin-right: 20px;
   }
 
   .user-list__link--note {
