--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -1,5 +1,6 @@
 .wrapper {
-  max-width: 1150px;
+  width: 320px;
+  max-width: 767px;
   margin: 0 auto;
   padding: 0 30px;
   outline: 2px solid lightblue;
@@ -7,6 +8,8 @@
 
 @media (min-width: 768px) {
   .wrapper {
+    max-width: 1150px;
+    width: 100%;
     padding: 0 50px;
   }
 }
