--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -83,7 +83,8 @@
 
   .main-nav__logo {
     flex-basis: 25%;
-    padding-right: 100px;
+    padding-right: 90px;
+    padding-left: 40px;
 
     justify-content: center;
     order: 2;
