--- a/source/sass/blocks/specif-list.scss
+++ b/source/sass/blocks/specif-list.scss
@@ -9,6 +9,10 @@
 
 @media (min-width: 768px) {
   .specif-list__item td {
-    padding-top: 13px;
+    padding-top: 10px;
+  }
+
+  .specif-list {
+    margin-top: 22px;
   }
 }
