--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -85,6 +85,7 @@
 @media (min-width: 1150px) {
   .advantages__wrapper {
     margin-bottom: 0;
+    padding-bottom: 30px;
   }
 
   .advantages__list {
@@ -93,12 +94,13 @@
   }
 
   .advantages__item {
-    margin-bottom: 35px;
+    margin-bottom: 0;
     padding-right: 57px;
   }
 
   .advantages__title {
     margin-bottom: 0;
-    padding-left: 175px;
+    padding-top: 10px;
+    padding-left: 170px;
   }
 }
