--- a/source/sass/blocks/catalog-list.scss
+++ b/source/sass/blocks/catalog-list.scss
@@ -140,7 +140,7 @@
   .catalog-list {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 70px;
+    padding-top: 80px;
   }
 
   .catalog-list__item {
@@ -167,7 +167,7 @@
   }
 
   .catalog-list__description {
-    margin-top: 0;
+    margin: 0;
   }
 
   .catalog-list__wrap {
